--- a/style.css
+++ b/style.css
@@ -132,16 +132,16 @@ label {
 
 .fraca {
     width: 25%;
-    background-color: #E71B32;
+    background-color: #1b1ee7;
 }
 
 .media {
-    background-color: #FAF408;
+    background-color: #fa0808;
     width: 50%;
 }
 
 .forte {
-    background-color: #00FF85;
+    background-color: #22ff00;
     width: 100%;
 }
 
