--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: white;
-    --cor-de-fundo: #00162E;
-    --fundo-senha: #00244D;
+    --branco: rgb(24, 226, 45);
+    --cor-de-fundo: #1675db;
+    --fundo-senha: #e210a6;
     --fundo-texto: #001E40;
-    --borda: #0075FF;
+    --borda: #ff0026;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
