--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: rgb(24, 226, 45);
-    --cor-de-fundo: #1675db;
+    --branco: rgb(10, 18, 11);
+    --cor-de-fundo: #bfd5eb;
     --fundo-senha: #e210a6;
-    --fundo-texto: #001E40;
+    --fundo-texto: #41d71b;
     --borda: #ff0026;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
