--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #0e1011;
     --fundo-senha: #e210a6;
     --fundo-texto: #020202;
-    --borda: #0e0b0b;
+    --borda: #2715ae;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
