--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --branco: rgb(10, 18, 11);
-    --cor-de-fundo: #0e1011;
+    --cor-de-fundo: #45aadd;
     --fundo-senha: #e210a6;
     --fundo-texto: #020202;
     --borda: #2715ae;
