--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: rgb(10, 18, 11);
-    --cor-de-fundo: #45aadd;
+    --branco: rgb(48, 214, 70);
+    --cor-de-fundo: #54585b;
     --fundo-senha: #e210a6;
     --fundo-texto: #020202;
     --borda: #2715ae;
