--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --branco: rgb(48, 214, 70);
     --cor-de-fundo: #54585b;
     --fundo-senha: #e210a6;
-    --fundo-texto: #020202;
+    --fundo-texto: #7492cf;
     --borda: #2715ae;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
