--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: rgb(48, 214, 70);
+    --branco: rgb(24, 29, 25);
     --cor-de-fundo: #54585b;
     --fundo-senha: #e210a6;
-    --fundo-texto: #7492cf;
+    --fundo-texto: #11161e;
     --borda: #2715ae;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
