--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --branco: rgba(209, 218, 211, 0.051);
     --cor-de-fundo: #54585b;
-    --fundo-senha: #e210a6;
+    --fundo-senha: #f2e8ef;
     --fundo-texto: #11161e;
     --borda: #2715ae;
     --roboto: 'Roboto', sans-serif;
