--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --branco: rgba(5, 14, 5, 0.937);
-    --cor-de-fundo: #54585b;
+    --cor-de-fundo: #3b93d7;
     --fundo-senha: #f2e8ef;
     --fundo-texto: #11161e;
     --borda: #2715ae;
