--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --branco: rgba(5, 14, 5, 0.937);
     --cor-de-fundo: #3b93d7;
     --fundo-senha: #f2e8ef;
-    --fundo-texto: #11161e;
+    --fundo-texto: #c31c1f;
     --borda: #2715ae;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
